add progress indication

--- a/HedgeModManager/UI/ModUpdateWindow.xaml
+++ b/HedgeModManager/UI/ModUpdateWindow.xaml
@@ -19,7 +19,7 @@
         <TextBlock x:Name="Header" Text="HEADER" Foreground="{DynamicResource HMM.Window.HeaderAccentBrush}" TextWrapping="Wrap" FontSize="30"
                        HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextAlignment="Center" Margin="20,0,20,0"/>
         <ProgressBar x:Name="TotalProgress" Grid.Row="1" Margin="15"/>
-        <ProgressBar x:Name="FileProgress" Grid.Row="2" Margin="15"/>
+        <ProgressBar x:Name="FileProgress" Grid.Row="2" Margin="15" Maximum="1"/>
         <TextBox x:Name="Log" IsReadOnly="True" Grid.Row="3" Margin="15"
                  VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"/>
     </Grid>
