--- a/HedgeModManager/UI/DownloadWindow.xaml
+++ b/HedgeModManager/UI/DownloadWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HedgeModManager"
-        mc:Ignorable="d"
+        mc:Ignorable="d" ResizeMode="NoResize"
         Title="HedgeModManager" Height="150" MinWidth="400" 
         WindowStartupLocation="CenterScreen" Style="{StaticResource HedgeWindow}" SizeToContent="Width">
     <Window.TaskbarItemInfo>
@@ -16,6 +16,6 @@
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <TextBlock x:Name="Header" Text="Header" FontSize="30" Foreground="{DynamicResource HMM.Window.HeaderAccentBrush}" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="0" Margin="20,0,20,0"/>
-        <ProgressBar x:Name="Progress" Grid.Row="1" Margin="15"/>
+        <ProgressBar x:Name="Progress" Grid.Row="1" Maximum="1" Margin="15"/>
     </Grid>
 </Window>
