--- a/HedgeModManager/Languages/en-AU.xaml
+++ b/HedgeModManager/Languages/en-AU.xaml
@@ -96,7 +96,7 @@
     <system:String x:Key="AboutWindowUITitle"  >About Hedge Mod Manager</system:String>
     <system:String x:Key="AboutWindowUILine1"  >A program designed to help people easily load Hedgehog Engine mods.</system:String>
     <system:String x:Key="AboutWindowUILine2"  >Requires a legally owned version of one of the supported games.</system:String>
-    <system:String x:Key="AboutWindowUICredits">Credits:</system:String>
+    <system:String x:Key="AboutWindowUICredits">Credits</system:String>
 
     <!-- ProfileWindow UI Strings -->
     <system:String x:Key="ProfileWindowUITitle"      >Manage Profiles</system:String>
