--- a/HedgeModManager/UI/AboutWindow.xaml
+++ b/HedgeModManager/UI/AboutWindow.xaml
@@ -35,22 +35,24 @@
                     <Label Content="Sajid"/>
                     <Label Content="Radfordhound"/>
                     <Label Content="Korama"/>
+                    <Label Content="MainMemory"/>
                     <Label Content="Skyth"/>
                     <Label Content="PTKickass"/>
                     <Label Content="M&amp;M"/>
                     <Label Content="Hyper"/>
-                    <Label Content="MainMemory"/>
+                    <Label Content="Wam"/>
                 </StackPanel>
                 <StackPanel Grid.Column="1">
                     <Label Content="Managing the project"/>
                     <Label Content="Writing 7.0"/>
                     <Label Content="Base Design"/>
                     <Label Content="CPKREDIR"/>
+                    <Label Content="mod-loader-common"/>
                     <Label Content="Contributing to Forces Mod Loader"/>
                     <Label Content="Contributing to the project"/>
                     <Label Content="Contributing to the project"/>
                     <Label Content="Contributing to the project"/>
-                    <Label Content="mod-loader-common"/>
+                    <Label Content="Contributing to the project"/>
                 </StackPanel>
             </Grid>
         </GroupBox>
@@ -71,7 +73,7 @@
                     <Label Content="Lady Luna"/>
                     <Label Content="KyRuS"/>
                     <Label Content="Kitzu"/>
-                    <Label Content="TuanPingas"/>
+                    <Label Content="tuanpingas"/>
                 </StackPanel>
                 <StackPanel Grid.Column="1">
                     <Label Content="Portuguese translations"/>
