--- a/HedgeModManager/UI/AboutModWindow.xaml
+++ b/HedgeModManager/UI/AboutModWindow.xaml
@@ -17,17 +17,17 @@
             HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <TextBlock x:Name="TitleLbl" Text="Title" FontSize="26" Width="Auto"/>
             <TextBlock FontSize="14" Width="Auto" Visibility="{Binding AuthorURL, Converter={StaticResource EmptyStringToVisibilityConverter}}">
-                <Run Text="Made by"/>
+                <Run Text="{StaticResource ModDescriptionUIMadeBy}"/>
                 <Hyperlink NavigateUri="{Binding AuthorURL}" Click="Hyperlink_OnClick">
                     <Run Text="{Binding Author}" Foreground="{DynamicResource HMM.Window.HeaderAccentBrush}"/>
                 </Hyperlink>
-                <Run Text="on"/>
+                <Run Text="{StaticResource ModDescriptionUIDate}"/>
                 <Run Text="{Binding Date}"/>
             </TextBlock>
             <TextBlock FontSize="14" Width="Auto" Visibility="{Binding AuthorURL, Converter={StaticResource InverseEmptyStringToVisibilityConverter}}">
-                <Run Text="Made by"/>
+                <Run Text="{StaticResource ModDescriptionUIMadeBy}"/>
                 <Run Text="{Binding Author}"/>
-                <Run Text="on"/>
+                <Run Text="{StaticResource ModDescriptionUIDate}"/>
                 <Run Text="{Binding Date}"/>
             </TextBlock>
         </StackPanel>
